--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "~1.0",
         "sentry/sentry-laravel": "^2.3",
-        "tymon/jwt-auth": "^1.0"
+        "php-open-source-saver/jwt-auth": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
